--- a/index.html
+++ b/index.html
@@ -1,9 +1,73 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My New Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Developer Hub</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+            line-height: 1.6;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 1em 0;
+            text-align: center;
+        }
+        .container {
+            max-width: 960px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .hero-image {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 20px auto;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1em 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+        footer a {
+            color: #ddd;
+            margin: 0 10px;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-  <h1>Hello from GitHub Pages!</h1>
+    <header>
+        <h1>Welcome to My Developer Hub</h1>
+    </header>
+
+    <div class="container">
+        <p>Hi there! I'm a developer passionate about building innovative and efficient solutions. This is my central online presence where I'll be sharing my projects, thoughts, and contributions to the world of code.</p>
+
+        <img src="blimp.png" alt="A placeholder image related to development" class="hero-image">
+
+        <p>Feel free to explore and learn more about my skills and the things I'm currently working on. I'm always eager to connect with other developers and enthusiasts, so don't hesitate to reach out!</p>
+    </div>
+
+    <footer>
+        <a href="https://github.com/radularasa">GitHub</a> |
+        <a href="https://wikipedia.com">LinkedIn</a> |
+        <a href="mailto:felix@radularasa.com">Email</a>
+    </footer>
 </body>
 </html>
