--- a/index.html
+++ b/index.html
@@ -16,7 +16,90 @@
 
         <img src="blimp.png" alt="A placeholder image related to development" class="hero-image">
 
-        <p>Feel free to explore and learn more about my skills and the things I'm currently working on. I'm always eager to connect with other developers and enthusiasts, so don't hesitate to reach out!</p>
+        <p>The radula (US: /ˈrædʒʊlə/; pl.: radulae or radulas)[1] is an anatomical structure used by mollusks for feeding, sometimes compared to a tongue.[2] It is a minutely toothed, chitinous ribbon, which is typically used for scraping or cutting food before the food enters the esophagus. The radula is unique to the mollusks, and is found in every class of mollusk except the bivalves, which instead use cilia, waving filaments that bring minute organisms to the mouth.
+
+Within the gastropods, the radula is used in feeding by both herbivorous and carnivorous snails and slugs. The arrangement of teeth (denticles) on the radular ribbon varies considerably from one group to another.
+
+In most of the more ancient lineages of gastropods, the radula is used to graze, by scraping diatoms and other microscopic algae off rock surfaces and other substrates.
+
+Predatory marine snails such as the Naticidae use the radula plus an acidic secretion to bore through the shell of other mollusks. Other predatory marine snails, such as the Conidae, use a specialized radular tooth as a poisoned harpoon. Predatory pulmonate land slugs, such as the ghost slug, use elongated razor-sharp teeth on the radula to seize and devour earthworms. Predatory cephalopods, such as squid, use the radula for cutting prey.
+
+The introduction of the term "radula" (Latin, "little scraper") is usually attributed to Alexander von Middendorff in 1847.[3]
+
+Components
+A typical radula comprises a number of bilaterally-symmetrical self-similar rows of teeth rooted in a radular membrane in the floor of their mouth cavity. Some species have teeth that bend with the membrane as it moves over the odontophore, whereas in other species, the teeth are firmly rooted in place, and the entire radular structure moves as one entity.[4]
+
+Radular membrane
+The elastic, delicate radular membrane may be a single tongue, or may split into two (bipartite).[5]
+
+Hyaline shield
+See Hyaline shield for more details.
+
+Odontophore
+The odontophore is the eversible, fleshy tongue underlying the radular membrane. It controls the organ's protrusion and return. It can be likened to a pulley wheel over which the radular 'string' is pulled.[6]
+
+Flexibility
+The radular teeth can generally bend in a sideways direction. In the patellogastropods, though, the teeth lost this ability and became fixed.[6]
+
+Teeth
+The radula comprises multiple, identical (or near-enough) rows of teeth, fine, flat, or spiney out-growths; often, each tooth in a row (along with its symmetric partner) will have a unique morphology.
+
+Each tooth can be divided into three sections: a base, a shaft, and a cusp. In radulae that just sweep, rather than rasp, the underlying substrate, the shaft and cusp are often continuous and cannot be differentiated.[7]
+
+The teeth often tesselate with their neighbours, and this interlocking serves to make it more difficult to remove them from the radular ribbon.[7]
+
+Radula formulae
+
+Radula and individual tooth of the predatory ghost slug, Selenochlamys ysbryda
+The number, shape, and specialized arrangement of molluscan teeth in each transverse row is consistent on a radula, and the different patterns can be used as a diagnostic characteristic to identify the species in many cases.
+
+Each row of radular teeth consists of
+
+One central or median tooth (or rachidian tooth, rachis tooth)
+On each side: one or more lateral teeth
+And then beyond that: one or more marginal teeth.
+This arrangement is expressed in a radular tooth formula, with the following abbreviations :
+
+R : designates the central tooth or the rachis tooth (in case of lack of central tooth : the zero sign 0)
+the lateral teeth on each side are expressed by a specific number or D, in case the outer lateral tooth is dominant.
+the marginal teeth are designated by a specific number or, in case they are in a very large numbers, the infinity symbol ∞
+
+Microscopic detail of a docoglossan radula showing the denticles or teeth
+This can be expressed in a typical formula such as:
+
+3 + D + 2 + R + 2 + D + 3
+
+This formula means: Across the radula there are 3 marginal teeth, 1 dominant lateral tooth, 2 lateral teeth, and one central tooth.
+
+Another formula for describing radulae omits the use of letters and simply gives a sequence of numbers in the order marginal-lateral-rachidian-lateral-marginal, thus:
+
+1-1-1-1-1
+
+This particular formula, which is common to the scaphopods, means one marginal tooth, one lateral tooth, one rachidian tooth, one lateral tooth, and one marginal tooth across the ribbon.[8]
+
+Morphology
+The morphology of the radula is related to diet. However, it is not fixed per species; some mollusks can adapt the form of their radular teeth according to which food sources are abundant.[9]
+
+Pointed teeth are best suited to grazing on algal tissue, whereas blunt teeth are preferable if feeding habits entail scraping epiphytes from surfaces.[9]
+
+Use
+
+Tracks made by terrestrial gastropods with their radulas, scraping green algae from a surface inside a greenhouse
+The radula is used in two main ways: either as a rake, generally to comb up microscopic, filamentous algae from a surface; or as a rasp, to feed directly on a plant.[10] The rhipidoglossan (see below) and, to a lesser extent, the taenigloissan radular types are suited to less strenuous modes of feeding, brushing up smaller algae or feeding on soft forms; mollusks with such radulae are rarely able to feed on leathery or coralline algae. On the other hand, the docoglossan gastropod radula allows a very similar diet to the polyplacophora, feeding primarily on these resistant algae, although microalgae are also consumed by species with these radular types.[10]
+
+The sacoglossans (sea slugs) form an interesting anomaly in that their radula comprises a single row; they feed by sucking on cell contents, rather than rasping at tissue, and most species feed on a single genus or species of alga. Here, the shape of the radular teeth has a close match with the food substrate on which they are used. Triangular teeth are suited to diets of calcified algae, and are also present in radulae used to graze on Caulerpa; in both these cases the cell walls are predominantly composed of xylan. Sabot-shaped teeth – rods with a groove along one side – are associated with diets of crossed-fibrillar cellulose-walled algae, such as the Siphonocladaceae and Cladophorales, whereas blade-shaped teeth are more generalist.[11]
+
+Early mollusks
+The first bona fide radula dates to the Early Cambrian,[12] although trace fossils from the earlier Ediacaran have been suggested to have been made by the radula of the organism Kimberella.
+
+A so-called radula from the early Cambrian was discovered in 1974, this one preserved with fragments of the mineral ilmenite suspended in a quartz matrix, and showing similarities to the radula of the modern cephalopod Sepia.[13] However, this was since re-interpreted as Salterella.[14] [/Volborthella?][verification needed]
+
+Based on the bipartite nature of the radular dentition pattern in solenogasters, larval gastropods and larval polyplacophora, it has been postulated that the ancestral mollusk bore a bipartite radula (although the radular membrane may not have been bipartite).[5]
+
+In chitons
+Each row of the polyplacophoran radula has two mineralized teeth used to abrade the substrate, and two longer teeth that sweep up any debris. The other 13 teeth on each row do not appear to be involved in feeding.[10]
+
+The teeth of Chaetopleura apiculata comprise fibres surrounded by magnetite, sodium and magnesium.[15]</p>
     </div>
 
     <footer>
