--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         <h1>Welcome to My Developer Hub</h1>
     </header>
 
+    <h1 class="title-with-image">
+        RADULA
+        <img src="blimp.png" alt="Separator">
+        RASA
+    </h1>
+
     <div class="container">
         <p>Hi there! I'm a developer passionate about building innovative and efficient solutions. This is my central online presence where I'll be sharing my projects, thoughts, and contributions to the world of code.</p>
 
