--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Developer Hub</title>
+    <title>radularasa.com</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -109,7 +112,7 @@ The teeth of Chaetopleura apiculata comprise fibres surrounded by magnetite, sod
     <footer>
         <a href="https://github.com/radularasa">GitHub</a> |
         <a href="https://wikipedia.com">LinkedIn</a> |
-        <a href="mailto:felix@radularasa.com">Email</a>
+        <a href="mailto:contact@radularasa.com">Email</a>
     </footer>
 </body>
 </html>
