--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         </h1>
     </header>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/XyWwi_W5Eh4?si=97aMnzx2cfHVbdgB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/XyWwi_W5Eh4?si=97aMnzx2cfHVbdgB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
 
     <div class="container">
         <p>Hi there! I'm a developer passionate about building innovative and efficient solutions. This is my central online presence where I'll be sharing my projects, thoughts, and contributions to the world of code.</p>
