--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/XyWwi_W5Eh4?si=97aMnzx2cfHVbdgB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/XyWwi_W5Eh4?si=97aMnzx2cfHVbdgB" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <div class="container">
